main/default/objects/Social_Network__c/Social_Network__c.object-meta.xml
<CustomObject>
    <label>Social Network</label>
    <nameField>
        <label>Social Network Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Networks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>