main/default/objects/Social_Network__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Social Networks</relationshipLabel>
    <relationshipName>Social_Networks</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>