main/default/objects/Social_Network__c/fields/End_point__c.field-meta.xml
<CustomField>
    <fullName>End_point__c</fullName>
    <label>End point</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>