main/default/objects/Social_Network__c/fields/pcklst__c.field-meta.xml
<CustomField>
    <fullName>pcklst__c</fullName>
    <label>pcklst</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>one</fullName>
            </value>
            <value>
                <fullName>two</fullName>
            </value>
            <value>
                <fullName>three</fullName>
            </value>
            <value>
                <fullName>four</fullName>
            </value>
            <value>
                <fullName>five</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>