main/default/objects/Social_Network__c/recordTypes/insta.recordType-meta.xml
<RecordType>
    <fullName>insta</fullName>
    <active>true</active>
    <label>insta</label>
</RecordType>