main/default/objects/Social_Network__c/recordTypes/two.recordType-meta.xml
<RecordType>
    <fullName>two</fullName>
    <active>false</active>
    <label>two</label>
</RecordType>